crates/solidity/testing/snapshots/bindings_output/yul/fallback_params/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs). Please don't edit by hand.

Parse errors:
Error: Expected ConstantKeyword or Identifier or InternalKeyword or PrivateKeyword or PublicKeyword.
   ╭─[input.sol:2:13]
   │
 2 │ ╭─▶     fallback(bytes calldata input) external payable returns (bytes memory output) {
   ┆ ┆   
 7 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     fallback(bytes calldata input) external payable returns (bytes memory output) {
   │     ────┬───  
   │         ╰───── unresolved
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │ ╭─▶ contract Test {
   ┆ ┆   
 8 │ ├─▶ }
   │ │       
   │ ╰─────── definiens: 1
───╯
